@@ -17,7 +17,7 @@ context:
 
 **Problem:** The proxy ships no first-class deploy shape: `bootJar` runs on plugin defaults only, nothing carries `--enable-preview` into the packaged artifact (a plain `java -jar` of today's jar cannot run preview-compiled classes), no launcher pins the runtime flags the catalog asserts (`-XX:+UseZGC`, `-XX:MaxDirectMemorySize`, IPv4 preference), and the packaged shape has never been booted or smoke-tested as `java -jar`.
 
-**Approach:** Make the standalone runnable JAR a first-class shape — explicit bootJar configuration (Enable-Preview manifest attribute, pinned main class), a documented operator JVM-flag contract (the one pinned flag set `java -jar` must be launched with — no repo launcher script; flags are the operator's invocation per the contract, exercised by the packaged smoke and consumed verbatim by the later Docker entrypoint; the page also carries the lazy-init documented deviation), JSON-stream mode banners (the parked decision visible at JAR boot), the standard Micrometer JVM binders bound, a JDK exact-build pin guard, and a subprocess packaged boot+smoke test (boot → one bind/relay round → SIGTERM drain) against the existing MockSmsc harness.
+**Approach:** Make the standalone runnable JAR a first-class shape — explicit bootJar configuration (pinned main class, stable archive name; NO Enable-Preview manifest attribute — dropped by owner amendment 2026-09-10: inert on the pinned JDK launcher, see Decisions), a documented operator JVM-flag contract (the one pinned flag set `java -jar` must be launched with — no repo launcher script; flags are the operator's invocation per the contract, exercised by the packaged smoke and consumed verbatim by the later Docker entrypoint; the page also carries the lazy-init documented deviation and is the single load-bearing home of `--enable-preview`), JSON-stream mode banners (the parked decision visible at JAR boot), the standard Micrometer JVM binders bound, a JDK exact-build pin guard, and a subprocess packaged boot+smoke test (boot → one bind/relay round → SIGTERM drain) against the existing MockSmsc harness.
 
 ## Boundaries & Constraints
 
@@ -39,7 +39,7 @@ context:
 | Scenario | Input / State | Expected Output / Behavior | Error Handling |
 |----------|--------------|---------------------------|----------------|
 | Packaged boot | `java -jar proxy-*.jar` + the documented flag set (valid cell args) | Boots to `startup_summary` JSON line; SMPP + metrics listeners bound | Config matrix refusals unchanged (AD-17) |
-| Preview classes under plain `java -jar` | No `--enable-preview` on CLI | Manifest `Enable-Preview: true` makes it boot | Missing attr → hard `UnsupportedClassVersionError` — the mutation row |
+| Preview classes under plain `java -jar` | No `--enable-preview` on CLI (amended 2026-09-10: the manifest attribute is inert — dropped) | Hard `UnsupportedClassVersionError` naming `--enable-preview` — fail-closed; the contract (T2) is the single load-bearing mechanism | The smoke's `--enable-preview` dropped → packaged boot RED (T5 automated row; proven manually in T1) |
 | Lazy-init enabled | `spring.main.lazy-initialization=true` | Boots — documented deviation: startup validation defers to first use | No runtime guard (owner decision); the contract page carries the warning |
 | Off-pin JDK | Build/run on JDK ≠ pinned exact build | Build-time refusal naming expected vs actual | Fail, not warn |
 | SIGTERM on packaged shape | `kill <pid>` of the booted jar | AD-22 ordered drain log lines, then clean exit | Quiesce bound (4.4 T5) holds |
@@ -48,6 +48,7 @@ context:
 | JVM metrics bound | Any packaged boot | Standard Micrometer JVM binder gauges present in the `/metrics` scrape | Absent binder = silent gap; pinned by scrape row |
 
 **Decisions (owner, 2026-09-10):**
+- Preview mechanism (owner amendment at T1, 2026-09-10): the `Enable-Preview` manifest attribute is INERT on the pinned JDK (temurin 25.0.3+9 launcher reads Add-Exports/Add-Opens/Enable-Native-Access from manifests but has no Enable-Preview arm — proven by a controlled minimal jar, by zero `Enable-Preview` strings in the runtime image, and by the real packaged boot failing with the attribute present) — DROPPED from the manifest; the T2 contract's `--enable-preview` flag is the single load-bearing preview mechanism. Matrix row 2, AC 1, and the T1/T5 mutation rows amended accordingly.
 - Slice: JAR-only foundation — Docker/jlink/distroless, Testcontainers parity smoke, and the DEP-1 secrets E2E belong to a later Epic-5 story.
 - Launcher: bare `java -jar` + a documented operator JVM-flag contract. No repo launcher script; the contract document is the single source of the flag set, the packaged smoke executes it, the future Docker entrypoint consumes it verbatim. The catalog's DEPLOY-003/004 JAR halves land as contract + smoke (dated technique amendment in the markers).
 - Mode banners: route through logback as WARN-level JSON (deferred-work :706 resolved by this story).
@@ -76,16 +77,16 @@ context:
 ## Tasks & Acceptance
 
 **Execution:**
-- [ ] **T1 — bootJar first-class** — Explicit `bootJar {}` in `proxy/build.gradle.kts`: `Enable-Preview: true` manifest attribute, pinned main class, stable archive name; wire the packaged-smoke test to consume the built jar (task dependency). Mutation: attribute removed → packaged boot row RED.
+- [x] **T1 — bootJar first-class** — Explicit `bootJar {}` in `proxy/build.gradle.kts`: pinned main class, stable archive name (`proxy.jar`); wire the packaged-smoke test to consume the built jar (task dependency + jar as test input). Mutation (amended 2026-09-10): the load-bearing arm is the CONTRACT FLAG, not a manifest attribute — `--enable-preview` dropped from the packaged boot → hard `UnsupportedClassVersionError` (proven manually in T1 verification; the automated row lands with T5's smoke).
 - [ ] **T2 — operator flag contract** — Author the contract (the pinned set: `--enable-preview`, `-XX:+UseZGC`, `-XX:MaxDirectMemorySize` coherent with the yml default budget, `-Djava.net.preferIPv4Stack=true`; rationale per flag) as a `docs/` page, INCLUDING the lazy-init deviation paragraph (the owner-decided :195 stance: enabling `spring.main.lazy-initialization` defers the AD-17 matrix and AD-30 self-check to first use — accepted deviation, warning lives here); the packaged smoke and a doc-consistency source-scan pin the set against the one definition. Mutation: a flag dropped from the contract → consistency row RED.
 - [ ] **T3 — banner stream swap** — Both mode warnings emit WARN-level JSON via logback (no `System.err`); boot-capture test asserts the JSON line + no plain-text stderr. Mutation: reverted to println → row RED.
 - [ ] **T4 — Micrometer JVM binders** — Bind the standard JVM binder set (memory/GC/threads/processor/uptime) via `ObservabilityConfig`; amend the `ResourceMetrics` "deliberate exclusion" javadoc; scrape test asserts the binder gauges appear beside the existing custom gauges. Mutation: binder beans removed → scrape row RED.
-- [ ] **T5 — packaged boot+smoke** — Subprocess test: `java -jar` the built jar with the T2 contract's flag set, `reverseB` cell (secret files from a temp dir), MockSmsc on the loopback; assert `startup_summary`, one bind→relay round via real socket, SIGTERM → ordered AD-22 drain lines → clean exit; AD-30 check passes under the contract flags. Mutation: smoke pointed at a stale jar / drain lines unasserted → row RED.
+- [ ] **T5 — packaged boot+smoke** — Subprocess test: `java -jar` the built jar with the T2 contract's flag set, `reverseB` cell (secret files from a temp dir), MockSmsc on the loopback; assert `startup_summary`, one bind→relay round via real socket, SIGTERM → ordered AD-22 drain lines → clean exit; AD-30 check passes under the contract flags. Mutation: smoke pointed at a stale jar / drain lines unasserted / the contract's `--enable-preview` dropped (→ `UnsupportedClassVersionError`, the preview arm's automated row) → row RED.
 - [ ] **T6 — JDK build-pin guard** — Build refuses on a JDK runtime ≠ the `.tool-versions` pin (reads the running JVM, no provisioning — foojay stays relaxed). Mutation: guard neutered → off-pin simulation row RED.
 - [ ] **T7 — proofs, catalog rows, ledger closure** — `./gradlew clean build --console=plain` GREEN end-to-end (clean required — source-scan trap); DEPLOY catalog: dated Status markers for the JAR halves of DEPLOY-003/004 (technique amended: contract + smoke, Docker halves stay open), DEPLOY-014, and any new rows authored as-landed; deferred-work: resolve the banner (:706), binder (:710), and lazy-init (:195 — documented-deviation decision, cites the contract page + commit) entries.
 
 **Acceptance Criteria:**
-- Given the built jar and a valid cell, when launched as `java -jar` with the documented flag set, then it boots to `startup_summary` with both listeners bound — and the manifest alone suffices for preview (no `--enable-preview` needed on the CLI for the classes to load).
+- Given the built jar and a valid cell, when launched as `java -jar` with the documented flag set, then it boots to `startup_summary` with both listeners bound — the contract's `--enable-preview` is load-bearing: a boot without it refuses hard (`UnsupportedClassVersionError`), fail-closed, and the jar manifest deliberately carries no preview marking (owner amendment 2026-09-10).
 - Given the operator flag contract, when lazy-init is considered, then the page documents the deviation — no runtime guard exists (owner decision 2026-09-10), and the warning names what defers to first use.
 - Given a mode A or B boot, when the banner fires, then it is a WARN JSON line on the logback stream and stderr carries no plain text.
 - Given any boot, when the `/metrics` endpoint is scraped, then the standard JVM binder gauges are present beside the custom relay/ROPC gauges.
@@ -96,11 +97,13 @@ context:
 
 ## Spec Change Log
 
+- 2026-09-10 (owner-ratified at T1): `Enable-Preview` manifest attribute DROPPED — proven inert on temurin 25.0.3+9 (controlled minimal-jar boot; zero `Enable-Preview` strings in the runtime image while Add-Exports/Add-Opens/Enable-Native-Access are present; real packaged boot fails with the attribute present). Frozen Approach, matrix row 2, and Decisions amended in place per the renegotiation; AC 1 reworded; T1/T5 mutation rows re-pointed to the contract-flag arm. Load-bearing preview mechanism = the T2 contract's `--enable-preview`.
+
 ## Review Triage Log
 
 ## Design Notes
 
-- The `-XX` flags cannot travel in a jar manifest — under the bare-`java -jar` decision the contract page is their single home; `Enable-Preview` (a real manifest attribute, JEP 12) is the only piece that belongs in the jar itself. Keep the two mechanisms separate in code and in the docs.
+- No launch configuration travels in the jar manifest at all (corrected at T1, 2026-09-10): the pinned JDK launcher honors only Add-Exports/Add-Opens/Enable-Native-Access from manifests — there is no Enable-Preview arm, and `-XX` flags never travel either. Under the bare-`java -jar` decision the contract page is the single home for the entire flag set including `--enable-preview`; the jar side carries structure only (pinned main class, stable archive name).
 - The flag set must be ONE shared definition — the contract page is the source; the smoke executes it and a doc-consistency source-scan pins the page against the smoke's own invocation, so the future Docker entrypoint copies from exactly one place — parity by construction, not by copy.
 - Memory interlock: yml defaults derive ~6 GiB budget with `budget-check: fail`; the contract's `MaxDirectMemorySize` must satisfy the AD-30 check against those SAME defaults (pick the value once, assert it in the smoke — do not fork yml).
 - The subprocess smoke needs the jar built before tests run — wire the dependency in Gradle, and mind the incremental-run trap: the smoke must re-run when the jar changes.
